Changes for version 0.1 - released 2011/xx/yy

*General:

This is the first version to be based on the Pake build tool.

Advantages:
. it does not depend on ANT anymore. This means it does not depend on java, either
. simpler bootstrap process: download a single php file, execute it
. easier to extend by adding new tasks
. out of the box support for sources on gith repositories